# MLZoomcamp_Project2

./: Dockerfile  Guide_for_evaluators.md  README.md  pyproject.toml
app/: help_funcs.py  main.py  predict_examples.py
data/: df_results.parquet
interactives/: index.html
models/: EXPECTED_COLS.pkl  confmodel.pkl  final_model2.pkl  multihot.pkl
notebooks/: 1_conf_tier.ipynb  train_best_XGBR.py
