[project]
name = "SteamGameCriticScore"
version = "0.1.0"
description = "Give 80k Steam games scores like Metacritic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "fastparquet>=2024.11.0",
    "ipympl>=0.9.8",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "wordcloud>=1.9.5",
    "xgboost>=3.1.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "optuna>=4.7.0",
    "plotly>=6.5.2",
    "psutil>=7.1.3",
    "pympler>=1.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
